--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "functions": {
-    "api/proxy": { 
-      "runtime": "@vercel/node@20.9.0" 
+    "api/proxy.js": { 
+      "runtime": "@vercel/node@18.x" 
     }
   },
   "rewrites": [
     {
       "source": "/api/proxy",
-      "destination": "/api/proxy.js" 
+      "destination": "/api/proxy.js"
     }
   ]
 }
