--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/proxy.js": { 
-      "runtime": "@vercel/node@18.x" 
+    "api/proxy": { 
+      "runtime": "node@18.x" 
     }
   },
   "rewrites": [
