--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,21 @@
 {
-  "rewrites": [
+  "functions": {
+    "api/proxy.js": { 
+      "runtime": "@vercel/node@18.x"
+    }
+  },
+  "routes": [
     {
-      "source": "/api/proxy",
-      "destination": "/api/proxy.js"
+      "src": "/api/proxy",
+      "dest": "/api/proxy.js"
+    },
+    {
+      "src": "/",
+      "dest": "index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
     }
   ]
 }
