--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "CORS proxy for OpenSky Network.",
   "dependencies": {
-    "node-fetch": "^2.6.7"  
+    "node-fetch": "^2.6.7"
   },
-  "engines": { 
+  "engines": {
     "node": "18.x"
+  },
+  "scripts": { // ⬅️ 關鍵：新增這個區塊
+    "start": "node api/proxy.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
