--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "engines": {
     "node": "18.x"
   },
-  "scripts": { // ⬅️ 關鍵：新增這個區塊
+  "scripts": { 
     "start": "node api/proxy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
