--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "functions": {
     "api/proxy.js": { 
-      "runtime": "node@18.x" 
+      "runtime": "@vercel/node" 
     }
   },
-  "rewrites": [ 
+  "rewrites": [
     {
       "source": "/api/proxy",
       "destination": "/api/proxy.js"
